--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,33 +1,9 @@
-.header {
-  margin: 0px auto 10px auto;
-  padding: 0px 10px;
-  width: 50vw;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #26292b;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  justify-content: space-between;
+nav.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 15px;
 }
-.header .logo {
-  width: 80px;
+nav.header img.logo {
   height: 80px;
-}
-.header .nav {
-  display: flex;
-  list-style: none;
-}
-.header .nav li {
-  margin: 0px 20px;
-}
-.header .nav li a {
-  color: white;
-  text-decoration: none;
-  font-weight: 300;
-}
-.header .nav li a.active {
-  color: #fe8019;
-  font-weight: 700;
+  margin: auto;
 }/*# sourceMappingURL=Header.css.map */
