--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,38 +1,10 @@
-.header {
-  margin: 0px auto 10px auto;
-  padding: 0px 10px;
-  width: 50vw;
-  height: 100px;
-  //background-color: rgba($color: #fff, $alpha: 0.3);
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #26292b;
-  position: sticky;
-  top: 0;
-  justify-content: space-between;
+nav.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 15px;
 
-  .logo {
-    width: 80px;
+  img.logo {
     height: 80px;
-  }
-
-  .nav {
-    display: flex;
-    list-style: none;
-
-    li {
-      margin: 0px 20px;
-
-      a {
-        color: white;
-        text-decoration: none;
-        font-weight: 300;
-      }
-
-      a.active {
-        color: #fe8019;
-        font-weight: 700;
-      }
-    }
+    margin: auto;
   }
 }
