--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,32 @@
 nav.header {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 15px;
+  padding: 1em;
+  font-family: "ddbb";
 }
 nav.header img.logo {
-  height: 80px;
+  height: 5em;
   margin: auto;
+}
+nav.header ul.navLinks {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  gap: 4em;
+  justify-content: center;
+  align-items: center;
+}
+nav.header ul.navLinks li.navLink {
+  font-size: 2em;
+  transition: 0.3s ease;
+  border-bottom: 3px solid white;
+}
+nav.header ul.navLinks li.navLink:hover {
+  border-bottom: 3px solid black;
+}
+nav.header ul.navLinks li.navLink a {
+  text-decoration: none;
+  color: black;
+  font-family: "ddbb";
 }/*# sourceMappingURL=Header.css.map */
