--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,37 @@
 nav.header {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 15px;
+  padding: 1em;
+  font-family: "ddbb";
 
   img.logo {
-    height: 80px;
+    height: 5em;
     margin: auto;
+  }
+
+  ul.navLinks {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    gap: 4em;
+    justify-content: center;
+    align-items: center;
+
+    li.navLink {
+      font-size: 2em;
+      transition: 0.3s ease;
+      border-bottom: 3px solid white;
+
+      &:hover {
+        border-bottom: 3px solid black;
+      }
+
+      a {
+        text-decoration: none;
+        color: black;
+        font-family: "ddbb";
+      }
+    }
   }
 }
