--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@ nav.header {
   grid-template-columns: 1fr 1fr;
   padding: 1em;
   font-family: "ddbb";
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 nav.header img.logo {
   height: 5em;
