--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,7 @@ nav.header {
   grid-template-columns: 1fr 1fr;
   padding: 1em;
   font-family: "ddbb";
+  border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
 
   img.logo {
     height: 5em;
